--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-drawer-inner-container{
+    display: flex;
+    flex-direction: column;
+    background: white;
+   
+    .mat-button{
+        text-align: left;
+        color: black;
+    }
+}
